Fixing shoe spacing

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -350,8 +350,11 @@ body {
 
 .shoe-pic {
 	width: 100%;
-	max-width: 300px;
 	text-align: center;
+	border-radius: 10px;
+	box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    	transition: transform 0.3s;
+    	cursor: pointer;
 }
 
 .shoe-pic img {
